# parameter-golf-autoresearch

./: .env.example  .gitignore  LICENSE  README.md  download_data.py  measure_artifact.py  orchestrate.py  program.md  pyproject.toml  research_queue.jsonl  research_results.jsonl  results.tsv  sota_1120_rascal_train_gpt.py  sota_1130_residlambdas_train_gpt.py  train_gpt.py  train_gpt_mlx.py
agents/: decision_state.py  experiment_agent.md  hypotheses.py  research_agent.md  shared.py
compute/: budget.py  constraints.py  contamination.py  dashboard.py  run_config.py  runpod_client.py  sync.py  threshold.py  tournament.py
dashboard/: .gitignore  package-lock.json  package.json  svelte.config.js
dashboard/migrations/: 0001_init.sql  0002_activity_log.sql
dashboard/src/: app.d.ts  app.html  hooks.server.ts
data/: cached_challenge_fineweb.py
data/tokenizers/: fineweb_1024_bpe.model  (+1 more)
research/: critic.py  experiments.py  extract_claims.py  extract_params.py  extract_run_spec.py  fetch.py  grade.py  inject.py  reflect.py  verify.py
tests/: test_authority_tiers.py  test_budget_manager.py  test_constraints.py  test_contamination.py  test_critic.py  test_dashboard_pusher.py  test_decision_state.py  test_extract_claims.py  test_extract_params.py  test_handle_promotion.py  test_inject_results.py  test_micro_run.py  test_orchestrate_supervisor.py  test_prefilter.py  test_reflect.py  test_reflection_validation.py  test_runpod_client.py  test_shared.py  test_source_tracking.py  test_technique_map.py  test_threshold.py  test_tournament.py  test_verify_gate.py
(+40 files in other folders)
